target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Class'", "'Self'", "'Break'", "'Continue'", 
                     "'Return'", "'If'", "'Elseif'", "'Else'", "'Foreach'", 
                     "'In'", "'True'", "'False'", "'Null'", "'Int'", "'Float'", 
                     "'Boolean'", "'String'", "'Array'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "'Var'", "'Val'", 
                     "'!'", "'&&'", "'||'", "'==.'", "'+.'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'='", "'('", "')'", "'{'", "'}'", 
                     "';'", "':'", "','", "'..'", "'.'", "<INVALID>", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "SELF", "BREAK", "CONTINUE", 
                      "RETURN", "IF", "ELSEIF", "ELSE", "FOREACH", "IN", 
                      "TRUE", "FALSE", "NULL", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "ARRAY", "CONSTRUCTOR", "DESTRUCTOR", "NEW", 
                      "BY", "VAR", "VAL", "NOT", "AND", "OR", "EQSTR", "CONCATSTR", 
                      "ADD", "SUB", "MUL", "DIV", "MODULO", "EQ", "NEQ", 
                      "LT", "GT", "LTE", "GTE", "ASSIGN", "LP", "RP", "LB", 
                      "RB", "SEMI", "COLON", "COMMA", "DOTDOT", "DOT", "DOUBLECOLON", 
                      "LSB", "RSB", "INTEGER_LITERAL", "ZERO_INTLIT", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "ID", "DOLLARID", "COMMENT", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declare = 1
    RULE_att_declare = 2
    RULE_mixed_list = 3
    RULE_member_id = 4
    RULE_method_declare = 5
    RULE_constructor_declare = 6
    RULE_destructor_declare = 7
    RULE_class_body = 8
    RULE_body = 9
    RULE_cons_des_body = 10
    RULE_param_list = 11
    RULE_id_list_with_type = 12
    RULE_ids_list = 13
    RULE_type_name = 14
    RULE_primitive_type = 15
    RULE_arr_type = 16
    RULE_cons_des_stmt = 17
    RULE_stmt = 18
    RULE_var_declare = 19
    RULE_assignment = 20
    RULE_assign_lhs = 21
    RULE_assign_rhs = 22
    RULE_if_stmt = 23
    RULE_elseif_stmt = 24
    RULE_else_stmt = 25
    RULE_for_stmt = 26
    RULE_break_stmt = 27
    RULE_continue_stmt = 28
    RULE_return_stmt = 29
    RULE_method_invoc_stmt = 30
    RULE_block_stmt = 31
    RULE_relational = 32
    RULE_exp = 33
    RULE_exp1 = 34
    RULE_exp2 = 35
    RULE_exp3 = 36
    RULE_exp4 = 37
    RULE_exp5 = 38
    RULE_exp6 = 39
    RULE_exp7 = 40
    RULE_exp8 = 41
    RULE_exp9 = 42
    RULE_exp10 = 43
    RULE_operands = 44
    RULE_index = 45
    RULE_instance_method = 46
    RULE_static_method = 47
    RULE_obj_create = 48
    RULE_exp_list = 49
    RULE_literal = 50
    RULE_boolean_literal = 51
    RULE_array_literal = 52

    ruleNames =  [ "program", "class_declare", "att_declare", "mixed_list", 
                   "member_id", "method_declare", "constructor_declare", 
                   "destructor_declare", "class_body", "body", "cons_des_body", 
                   "param_list", "id_list_with_type", "ids_list", "type_name", 
                   "primitive_type", "arr_type", "cons_des_stmt", "stmt", 
                   "var_declare", "assignment", "assign_lhs", "assign_rhs", 
                   "if_stmt", "elseif_stmt", "else_stmt", "for_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "method_invoc_stmt", 
                   "block_stmt", "relational", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", 
                   "operands", "index", "instance_method", "static_method", 
                   "obj_create", "exp_list", "literal", "boolean_literal", 
                   "array_literal" ]

    EOF = Token.EOF
    CLASS=1
    SELF=2
    BREAK=3
    CONTINUE=4
    RETURN=5
    IF=6
    ELSEIF=7
    ELSE=8
    FOREACH=9
    IN=10
    TRUE=11
    FALSE=12
    NULL=13
    INT=14
    FLOAT=15
    BOOLEAN=16
    STRING=17
    ARRAY=18
    CONSTRUCTOR=19
    DESTRUCTOR=20
    NEW=21
    BY=22
    VAR=23
    VAL=24
    NOT=25
    AND=26
    OR=27
    EQSTR=28
    CONCATSTR=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MODULO=34
    EQ=35
    NEQ=36
    LT=37
    GT=38
    LTE=39
    GTE=40
    ASSIGN=41
    LP=42
    RP=43
    LB=44
    RB=45
    SEMI=46
    COLON=47
    COMMA=48
    DOTDOT=49
    DOT=50
    DOUBLECOLON=51
    LSB=52
    RSB=53
    INTEGER_LITERAL=54
    ZERO_INTLIT=55
    FLOAT_LITERAL=56
    STRING_LITERAL=57
    ID=58
    DOLLARID=59
    COMMENT=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.class_declare()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 111
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def class_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_bodyContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_bodyContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declare" ):
                return visitor.visitClass_declare(self)
            else:
                return visitor.visitChildren(self)




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(D96Parser.CLASS)

            self.state = 114
            self.match(D96Parser.ID)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 115
                self.match(D96Parser.COLON)

                self.state = 116
                self.match(D96Parser.ID)


            self.state = 119
            self.match(D96Parser.LB)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.VAR) | (1 << D96Parser.VAL) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLARID))) != 0):
                self.state = 120
                self.class_body()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mixed_list(self):
            return self.getTypedRuleContext(D96Parser.Mixed_listContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def exp_list(self):
            return self.getTypedRuleContext(D96Parser.Exp_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_declare" ):
                return visitor.visitAtt_declare(self)
            else:
                return visitor.visitChildren(self)




    def att_declare(self):

        localctx = D96Parser.Att_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_att_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAR or _la==D96Parser.VAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 129
            self.mixed_list()
            self.state = 130
            self.match(D96Parser.COLON)
            self.state = 131
            self.type_name()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN:
                self.state = 132
                self.match(D96Parser.ASSIGN)
                self.state = 133
                self.exp_list()


            self.state = 136
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mixed_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Member_idContext)
            else:
                return self.getTypedRuleContext(D96Parser.Member_idContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_mixed_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMixed_list" ):
                return visitor.visitMixed_list(self)
            else:
                return visitor.visitChildren(self)




    def mixed_list(self):

        localctx = D96Parser.Mixed_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mixed_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.member_id()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 139
                self.match(D96Parser.COMMA)
                self.state = 140
                self.member_id()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_member_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember_id" ):
                return visitor.visitMember_id(self)
            else:
                return visitor.visitChildren(self)




    def member_id(self):

        localctx = D96Parser.Member_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member_id(self):
            return self.getTypedRuleContext(D96Parser.Member_idContext,0)


        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def body(self):
            return self.getTypedRuleContext(D96Parser.BodyContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def constructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Constructor_declareContext,0)


        def destructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Destructor_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declare" ):
                return visitor.visitMethod_declare(self)
            else:
                return visitor.visitChildren(self)




    def method_declare(self):

        localctx = D96Parser.Method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_declare)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.member_id()
                self.state = 149
                self.match(D96Parser.LP)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 150
                    self.param_list()


                self.state = 153
                self.match(D96Parser.RP)
                self.state = 154
                self.match(D96Parser.LB)
                self.state = 155
                self.body()
                self.state = 156
                self.match(D96Parser.RB)
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.constructor_declare()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.destructor_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def cons_des_body(self):
            return self.getTypedRuleContext(D96Parser.Cons_des_bodyContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_declare" ):
                return visitor.visitConstructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def constructor_declare(self):

        localctx = D96Parser.Constructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructor_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 163
            self.match(D96Parser.LP)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 164
                self.param_list()


            self.state = 167
            self.match(D96Parser.RP)
            self.state = 168
            self.match(D96Parser.LB)
            self.state = 169
            self.cons_des_body()
            self.state = 170
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Destructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def cons_des_body(self):
            return self.getTypedRuleContext(D96Parser.Cons_des_bodyContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_destructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDestructor_declare" ):
                return visitor.visitDestructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def destructor_declare(self):

        localctx = D96Parser.Destructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_destructor_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(D96Parser.DESTRUCTOR)
            self.state = 173
            self.match(D96Parser.LP)
            self.state = 174
            self.match(D96Parser.RP)
            self.state = 175
            self.match(D96Parser.LB)
            self.state = 176
            self.cons_des_body()
            self.state = 177
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_declare(self):
            return self.getTypedRuleContext(D96Parser.Att_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_class_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAR, D96Parser.VAL]:
                self.state = 179
                self.att_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.state = 180
                self.method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D96Parser.StmtContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):
